<package>
  <name>uashh_smach</name>
  <version>1.0.0</version>
  <description>Smach prototypes of University of Applied Sciences Hamburg.</description>
  <maintainer email="none@local.edu">Felix</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/uashh_smach</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Felix</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>smach_ros</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>smach_ros</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>

</package>
